--- a/src/main/webapp/modules/counter/productView.html
+++ b/src/main/webapp/modules/counter/productView.html
@@ -1,13 +1,13 @@
 	<div>
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			<small>Code : </small><strong>{{receipt.curTran.item.code}}</strong>
+			<small>Code : </small><strong>{{receipt.curTran.item.product.code}}</strong>
 		</div>
 		<table class="table table-condensed table-bordered">
 		<tbody>
 		<tr>
 			<td>
-				<small>Name : </small><strong><small>{{receipt.curTran.item.name}}</small></strong>
+				<small>Name : </small><strong><small>{{receipt.curTran.item.product.name}}</small></strong>
 			</td>
 		</tr>
 		<!-- 
@@ -22,9 +22,9 @@
 				<small>Buy Rate</small>
 				<span class="pull-right">
 					<small>
-						&gt;= <span class="text-primary">{{receipt.curTran.item.buyRate | number : 5}}</span>
+						&gt;= <span class="text-primary">{{receipt.curTran.item.product.buyRate | number : 5}}</span>
 						&nbsp;&nbsp;
-						&lt;= <span class="text-primary">{{receipt.curTran.item.buyPercent | number : 5}}</span>
+						&lt;= <span class="text-primary">{{receipt.curTran.item.product.buyPercent | number : 5}}</span>
 					</small>
 				</span>
 			</td>
@@ -34,9 +34,9 @@
 				<small>Sell Rate</small>
 				<span class="pull-right">
 					<small>
-						&gt;= <span class="text-primary">{{receipt.curTran.item.sellRate | number : 5}}</span>
+						&gt;= <span class="text-primary">{{receipt.curTran.item.product.sellRate | number : 5}}</span>
 						&nbsp;&nbsp;
-						&lt;= <span class="text-primary">{{receipt.curTran.item.sellPercent | number : 5}}</span>
+						&lt;= <span class="text-primary">{{receipt.curTran.item.product.sellPercent | number : 5}}</span>
 					</small>
 				</span>
 			</td>
@@ -58,7 +58,7 @@
 		</tr>
 		<tr>
 			<td class="text-right text-primary">
-				<strong>{{receipt.curTran.item.handStockAverage | number : 5}}</strong>
+				<strong>{{receipt.curTran.item.product.handStockAverage | number : 5}}</strong>
 			</td>
 		</tr>
 		<tr>
@@ -68,7 +68,7 @@
 		</tr>
 		<tr>
 			<td class="text-right text-primary">
-				<strong><small>{{receipt.curTran.item.handStockTellers | number}}</small></strong>
+				<strong><small>-</small></strong>
 			</td>
 		</tr>
 		<tr>
@@ -78,7 +78,7 @@
 		</tr>
 		<tr>
 			<td class="text-right text-primary">
-				<strong><small>{{receipt.curTran.item.handStockBranch | number}}</small></strong>
+				<strong><small>-</small></strong>
 			</td>
 		</tr>
 		<tr>
@@ -88,7 +88,7 @@
 		</tr>
 		<tr>
 			<td class="text-right text-primary">
-				<strong><small>{{receipt.curTran.item.handStockTotal | number}}</small></strong>
+				<strong><small>{{receipt.curTran.item.product.handStock | number}}</small></strong>
 			</td>
 		</tr>
 		</tbody>
