--- a/src/main/webapp/home-d.html
+++ b/src/main/webapp/home-d.html
@@ -7,15 +7,12 @@
 
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" >
 <link rel="stylesheet" href="assets/fontawesome/css/font-awesome.min.css">
-<link rel="stylesheet" href="modules/wydNotify/wydNotifyByBootstrap.css">
-<!-- 
-<link rel="stylesheet" href="assets/ngNotify/ng-notify.min.css" />
--->
 <link rel="stylesheet" href="assets/ui-select/selectize.bootstrap3.css" />
 <link rel="stylesheet" href="assets/ui-select/select.min.css" />
 <link rel="stylesheet" href="assets/angular-aside/css/angular-aside.min.css" />
 
 <link rel="stylesheet" href="assets/home.css" />
+<link rel="stylesheet" href="modules/wydNotify/wydNotifyByBootstrap.css">
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
@@ -29,43 +26,45 @@
 <div id="header">
 	<nav class="navbar navbar-default navbar-fixed-top" x-role="navigation">
 	
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" 
-					x-toggle="collapse" x-target=".navbar-inverse-collapse"">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="index-d.html">Watch Your Sales</a>
-			</div>
-			<div class="navbar-collapse collapse">
-				<form class="navbar-form navbar-left">
-					<button class="btn btn-default" x-ng-click="showLeftMenu()">
-						<i class="fa fa-bars"></i>&nbsp;
+		<div class="container-fluid">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" 
+						x-toggle="collapse" x-target=".navbar-inverse-collapse"">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
 					</button>
-				</form>
-				<ul class="nav navbar-nav">
-					<li>
-						<a x-ng-href="#{{homeView}}"><i class="fa fa-home"></i> Home</a>
-					</li>
-				</ul>
-				<form class="navbar-form navbar-left">
-					My Cash : <span class="badge badge-info">{{ empS.cashMine | number : 2 }}</span>
-					&nbsp;&nbsp;
-					My Stock : <span class="badge badge-info">{{ empS.stockMine | number : 2 }}</span>
-					&nbsp;&nbsp;
-					My Total : <span class="badge badge-info">{{ empS.cashMine + empS.stockMine | number : 2 }}</span>
-				</form>
-				<ul class="nav navbar-nav navbar-right" x-ng-hide="isLoggedIn">
-					<li>
-						<a href="#/settings"><i class="fa fa-cog"></i> Settings</a>
-					</li>
-					<li>
-						<a href="#/signout"><i class="fa fa-sign-out"></i> Logout</a>
-					</li>
-				</ul>
+					<a class="navbar-brand" href="index-d.html">Watch Your Sales</a>
+				</div>
+				<div class="navbar-collapse collapse">
+					<form class="navbar-form navbar-left">
+						<button class="btn btn-default" x-ng-click="showLeftMenu()">
+							<i class="fa fa-bars"></i>&nbsp;
+						</button>
+					</form>
+					<ul class="nav navbar-nav">
+						<li>
+							<a x-ng-href="#{{homeView}}"><i class="fa fa-home"></i> Home</a>
+						</li>
+					</ul>
+					<form class="navbar-form navbar-left">
+						My Cash : <span class="badge badge-info">{{ empS.cashMine | number : 2 }}</span>
+						&nbsp;&nbsp;
+						My Stock : <span class="badge badge-info">{{ empS.stockMine | number : 2 }}</span>
+						&nbsp;&nbsp;
+						My Total : <span class="badge badge-info">{{ empS.cashMine + empS.stockMine | number : 2 }}</span>
+					</form>
+					<ul class="nav navbar-nav navbar-right" x-ng-hide="isLoggedIn">
+						<li>
+							<a href="#/settings"><i class="fa fa-cog"></i> Settings</a>
+						</li>
+						<li>
+							<a href="#/signout"><i class="fa fa-sign-out"></i> Logout</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 		
