--- a/src/main/webapp/modules/wydNotify/wydNotifyByBootstrap.html
+++ b/src/main/webapp/modules/wydNotify/wydNotifyByBootstrap.html
@@ -1,5 +1,5 @@
 
-<div class="alerts alert-fixed-top">
+<div class="alert-fixed-bottom">
 
 	<div class="text-center alert" x-ng-repeat="alert in notifyService.alerts"
 x-ng-class="{ 'alert-success': alert.success, 'alert-info': alert.info, 'alert-warning': alert.warning,'alert-danger': alert.error}">
