--- a/src/main/webapp/index-d.html
+++ b/src/main/webapp/index-d.html
@@ -10,6 +10,9 @@
 <link rel="stylesheet" href="modules/wydNotify/wydNotifyByBootstrap.css">
 <link rel="stylesheet" href="assets/ui-select/selectize.bootstrap3.css" />
 <link rel="stylesheet" href="assets/ui-select/select.min.css" />
+<!-- 
+<link rel="stylesheet" href="assets/angular-panels/angular.panels.css">
+-->
 <link rel="stylesheet" href="assets/angular-aside/css/angular-aside.min.css" />
 <link rel="stylesheet" href="assets/index.css" />
 
@@ -70,6 +73,9 @@
 	<x-footer-navigator-directive></x-footer-navigator-directive>
 </div>
 
+<div x-panels="true" x-panel-left-template="modules/zgeneral/sideBarLeft.html">
+</div>
+
 <script type="text/javascript"
 	src="assets/lodash.min.js"></script>
 <script type="text/javascript" 
@@ -97,6 +103,10 @@
 	src="assets/inputmask/jquery.inputmask.bundle.min.js"></script>
 <script type="text/javascript" 
 	src="assets/inputmask/green.inputmask4angular.js"></script>
+<!-- 	
+<script type="text/javascript" 
+	src="assets/angular-panels/angular.panels.js"></script>	
+-->	
 <script type="text/javascript" 
 	src="assets/angular-aside/js/angular-aside.min.js"></script>
 
