--- a/src/main/webapp/index-g.html
+++ b/src/main/webapp/index-g.html
@@ -112,30 +112,32 @@
 
 
 <script type="text/javascript"
-	src="assets/lib/lodash.min.js"></script>
+	src="assets/lodash.min.js"></script>
 <script type="text/javascript" 
-	src="assets/lib/moment.min.js"></script>
+	src="assets/moment.min.js"></script>
 <script type="text/javascript" 
-	src="assets/lib/jquery.min.js"></script>
+	src="assets/jquery.min.js"></script>
 <script type="text/javascript" 
-	src="assets/lib/holder.js"></script>
+	src="assets/holder.js"></script>
 	
 <script type="text/javascript"
-	src="assets/angular/13x/angular.js"></script>
+	src="assets/angularjs/angular.js"></script>
 <script type="text/javascript"
-	src="assets/angular/13x/angular-route.min.js"></script>
+	src="assets/angularjs/angular-route.js"></script>
 <script type="text/javascript"
-	src="assets/angular/13x/angular-sanitize.min.js"></script>
+	src="assets/angularjs/angular-sanitize.js"></script>
 
 <script type="text/javascript" 
-	src="assets/lib/ngStorage.min.js"></script>
-
+	src="assets/ngStorage.min.js"></script>
+	
 <script type="text/javascript" 
 	src="assets/ui-bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
 
 <script type="text/javascript" src="modules/init.js"></script>
-<script type="text/javascript" src="modules/zgeneral/wydNotifyByBootstrap.js"></script>
+<script type="text/javascript" src="modules/wydNotify/wydNotifyByBootstrap.js"></script>
+
 <script type="text/javascript" src="modules/home/indexController.js"></script>
+
 <script type="text/javascript" src="modules/common.js"></script>
 <script type="text/javascript" src="modules/main-g.js"></script>
 
