--- a/src/main/webapp/modules/dealer/d.html
+++ b/src/main/webapp/modules/dealer/d.html
@@ -16,9 +16,7 @@
 	   	<th class="text-center"><small>Name</small></th>
 	   	<th class="text-center"><small>Email Id</small></th>
 	   	<th class="text-center"><small>Mobile No</small></th>
-	   	<th class="text-center"><small>Status</small></th>
 	   	<th class="text-center"><small>Balance</small></th>
-	   	<th class="text-center"><small>Update Time</small></th>
 	</tr>
 	</thead>
 	<tbody>
@@ -38,14 +36,8 @@
 		<td>
 			{{item.handPhoneNumber}}
 		</td>
-		<td>
-			{{item.status}}
-		</td>	
 		<td class="text-right">
-			{{item.stock.handStock  | number : 2}}
-		</td>
-		<td width="160">
-			{{item.updateTime | date:'yyyy-MM-dd HH:mm:ss'}}
+			{{item.cashStock.handStock  | number : 2}}
 		</td>
 	</tr>
 	</tbody>
