--- a/src/main/webapp/console.html
+++ b/src/main/webapp/console.html
@@ -44,7 +44,7 @@
 						<a x-ng-href="#/home"><i class="fa fa-home"></i> Home</a>
 					</li>
 					<li>
-					<a href="#/dataNavigator">Data Viewer</a>
+					<a href="#/dataViewer">Data Viewer</a>
 					</li>
 					<li>
 					<a href="#/generalTransaction">General Transaction</a>
@@ -123,7 +123,7 @@
 
 <script type="text/javascript" src="modules/console/dataService.js"></script>
 <script type="text/javascript" src="modules/console/home/controller.js"></script>
-<script type="text/javascript" src="modules/console/dataNavigator/controller.js"></script>
+<script type="text/javascript" src="modules/console/dataViewer/controller.js"></script>
 <script type="text/javascript" src="modules/console/system/controller.js"></script>
 
 <script type="text/javascript" src="modules/directives.js"></script>
