updating latest changes...

--- a/src/main/webapp/modules/customer/d.html
+++ b/src/main/webapp/modules/customer/d.html
@@ -37,7 +37,7 @@
 			{{item.handPhoneNumber}}
 		</td>
 		<td class="text-right">
-			{{item.cashStock.handStock  | number : 2}}
+			{{item.cashAccount.amount  | number : 2}}
 		</td>
 	</tr>
 	</tbody>
