updating latest changes...

--- a/src/main/webapp/modules/counter/d.html
+++ b/src/main/webapp/modules/counter/d.html
@@ -39,7 +39,7 @@
     	</div>				
 		<div>			
  			<strong><small>Balance&nbsp;&nbsp;&nbsp;</small></strong> 
- 			: {{receipt.customer.cashStock.handStock | number : 2}}
+ 			: {{receipt.customer.cashAccount.handStock | number : 2}}
 		</div>
 	</div>	
 	<div class="col-md-2">
