--- a/src/main/webapp/modules/zgeneral/sideBarLeft-d.html
+++ b/src/main/webapp/modules/zgeneral/sideBarLeft-d.html
@@ -13,12 +13,15 @@
 				<i class="fa fa-home"></i> Home
 			</a>
 		</li>	
-		<li class="list-group-item" x-ng-hide="sessionContext.sessionUser.isAppUser">
+		<li class="list-group-item">
 			<a href="" x-ng-click="routeTo($event, '/counter')">
 				Counter
 			</a>
+			<a href="" x-ng-click="routeTo($event, '/transfer')" class="pull-right">
+				Transfer
+			</a>
 		</li>	
-		<li class="list-group-item" x-ng-hide="sessionContext.sessionUser.isAppUser">
+		<li class="list-group-item">
 			<a href="" x-ng-click="routeTo($event, '/products')">
 				Products
 			</a>
@@ -26,12 +29,12 @@
 				Stocks
 			</a>
 		</li>	
-		<li class="list-group-item" x-ng-hide="sessionContext.sessionUser.isAppUser">
+		<li class="list-group-item">
 			<a href="" x-ng-click="routeTo($event, '/customers')"> 
 				Customers
 			</a>
 		</li>	
-		<li class="list-group-item" x-ng-hide="sessionContext.sessionUser.isAppUser">
+		<li class="list-group-item">
 				Customer &nbsp;&nbsp;
 			<a href="" x-ng-click="routeTo($event, '/customerOrders')"> 
 				Orders
@@ -40,7 +43,7 @@
 				Order History
 			</a>
 		</li>
-		<li class="list-group-item" x-ng-hide="sessionContext.sessionUser.isAppUser">
+		<li class="list-group-item">
 				Customer &nbsp;&nbsp;
 			<a href="" x-ng-click="routeTo($event, '/customerTrans')" class="pull-right"> 
 				Transactions
@@ -51,7 +54,7 @@
 				Dealers
 			</a>
 		</li>	
-		<li class="list-group-item" x-ng-hide="sessionContext.sessionUser.isAppUser">
+		<li class="list-group-item">
 				Dealer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="" x-ng-click="routeTo($event, '/dealerOrders')"> 
 			 	Orders
@@ -60,25 +63,26 @@
 				Order History
 			</a>
 		</li>
-		<li class="list-group-item" x-ng-hide="sessionContext.sessionUser.isAppUser">
+		<li class="list-group-item">
 				Dealer
 			<a href="" x-ng-click="routeTo($event, '/dealerTrans')" class="pull-right"> 
 			 	Transactions
 			</a>
 		</li>
-		<li class="list-group-item" x-ng-hide="sessionContext.sessionUser.isAppUser">
+		<li class="list-group-item">
+			<a href="" x-ng-click="routeTo($event, '/ledgers')">
+				Ledger
+			</a>
+			<a href="" x-ng-click="routeTo($event, '/ledgerTrans')" class="pull-right"> 
+				Transactions
+			</a>
+		</li>
+		<li class="list-group-item">
 			<a href="" x-ng-click="routeTo($event, '/employees')"> 
 				Employees
 			</a>
-		</li>	
-		<li class="list-group-item" x-ng-show="sessionContext.sessionUser.isAppUser">
-			<a href="" x-ng-click="routeTo($event, '/users')">
-				Users
-			</a>
-		</li>	
-		<li class="list-group-item" x-ng-show="sessionContext.sessionUser.isAppUser">
-			<a href="" x-ng-click="routeTo($event, '/agencys')">
-				Agencys
+			<a href="" x-ng-click="routeTo($event, '/trialBalance')" class="pull-right"> 
+				Trial Balance
 			</a>
 		</li>	
 	</ul>
