--- a/src/main/webapp/home-d.html
+++ b/src/main/webapp/home-d.html
@@ -49,11 +49,11 @@
 						</li>
 					</ul>
 					<form class="navbar-form navbar-left">
-						My Cash : <span class="badge badge-info">{{ empS.cashMine.handStock | number : 2 }}</span>
+						My Cash : <span class="badge badge-info">{{ sessionS.cashMine.handStock | number : 2 }}</span>
 						&nbsp;&nbsp;
-						My Stock : <span class="badge badge-info">{{ empS.stockMine | number : 2 }}</span>
+						My Stock : <span class="badge badge-info">{{ sessionS.stockMine | number : 2 }}</span>
 						&nbsp;&nbsp;
-						My Total : <span class="badge badge-info">{{ empS.cashMine.handStock + empS.stockMine | number : 2 }}</span>
+						My Total : <span class="badge badge-info">{{ sessionS.cashMine.handStock + sessionS.stockMine | number : 2 }}</span>
 					</form>
 					<ul class="nav navbar-nav navbar-right" x-ng-hide="isLoggedIn">
 						<li>
@@ -75,7 +75,7 @@
 					</div>
 					<div class="col-md-9 text-right">
 						<strong><small>
-						{{sessionContext.sessionUser.firstName}} / {{sessionContext.sessionUser.userId}} / {{sessionContext.sessionUser.roleId}}
+						{{sessionContext.sessionDto.firstName}} / {{sessionContext.sessionDto.userId}} / {{sessionContext.sessionDto.roleId}}
 						</small></strong>
 					</div>
 				</div>
@@ -86,20 +86,20 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-3">
-						<strong><small>Agency :</small></strong> 
-						Cash : <span class="badge badge-info">{{ empS.cashAgency.handStock | number : 2 }}</span>
+						<strong><small>Branch :</small></strong> 
+						Cash : <span class="badge badge-info">{{ sessionS.cashBranch.handStock | number : 2 }}</span>
 					</div>	
 					<div class="col-md-2">
-						Stock : <span class="badge badge-info">{{ empS.stockAgency | number : 2 }}</span>
+						Stock : <span class="badge badge-info">{{ sessionS.stockBranch | number : 2 }}</span>
 					</div>
 					<div class="col-md-3">
-						Total : <span class="badge badge-info">{{ empS.cashAgency.handStock + empS.stockAgency | number : 2 }}</span>
+						Total : <span class="badge badge-info">{{ sessionS.cashBranch.handStock + sessionS.stockBranch | number : 2 }}</span>
 					</div>
 					<div class="col-md-2">
-						<strong><small>Dealer :</small></strong> <span class="badge badge-info">{{ empS.cashDealer.handStock | number : 2 }}</span>
+						<strong><small>Dealer :</small></strong> <span class="badge badge-info">{{ sessionS.cashDealer.handStock | number : 2 }}</span>
 					</div>
 					<div class="col-md-2">	
-						<strong><small>Customer :</small></strong> <span class="badge badge-info">{{ empS.cashCustomer.handStock | number : 2 }}</span>
+						<strong><small>Customer :</small></strong> <span class="badge badge-info">{{ sessionS.cashCustomer.handStock | number : 2 }}</span>
 					</div>
 				</div>	
 			</div>
@@ -177,6 +177,7 @@
 
 <script type="text/javascript" src="modules/transfer/transferController.js"></script>
 
+<script type="text/javascript" src="modules/ledger/ledgerService.js"></script>
 <script type="text/javascript" src="modules/ledger/ledgerController.js"></script>
 
 <script type="text/javascript" src="modules/ledgerTran/ledgerTranController.js"></script>
