updating latest changes...

--- a/src/main/webapp/index-m.html
+++ b/src/main/webapp/index-m.html
@@ -106,7 +106,7 @@
 
 <script type="text/javascript" src="modules/common.js"></script>
 <script type="text/javascript" src="modules/directives.js"></script>
-<script type="text/javascript" src="modules/main-m.js"></script>
+<script type="text/javascript" src="modules/index-m.js"></script>
 
 </body>
 </html>
