updating latest changes...

--- a/src/main/webapp/modules/console/dataViewer/d-accounts.html
+++ b/src/main/webapp/modules/console/dataViewer/d-accounts.html
@@ -17,7 +17,7 @@
 	   	<th class="text-center"><small>User Id</small></th>
 	   	<th class="text-center"><small>Type</small></th>
 	   	<th class="text-center"><small>IsMinus</small></th>
-	   	<th class="text-center"><small>Balance</small></th>
+	   	<th class="text-center"><small>Amount</small></th>
 	   	<th class="text-center"><small>HStock</small></th>
 	   	<th class="text-center"><small>VStock Buy</small></th>
 	   	<th class="text-center"><small>VStock Sell</small></th>
