--- a/src/main/webapp/modules/console/dataViewer/d-products.html
+++ b/src/main/webapp/modules/console/dataViewer/d-products.html
@@ -15,7 +15,7 @@
 		<th class="text-center"><small>Id</small></th>
 	   	<th class="text-center"><small>Code</small></th>
 	   	<th class="text-center"><small>Name</small></th>
-	   	<th class="text-center"><small>Balance</small></th>
+	   	<th class="text-center"><small>Amount</small></th>
 	   	<th class="text-center"><small>Hand Stock</small></th>
 	   	<th class="text-center"><small>Hand Average</small></th>
 	   	<th class="text-center"><small>Virtual Buy</small></th>
