updating latest changes...

--- a/src/main/webapp/home-d.html
+++ b/src/main/webapp/home-d.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="modules/wydNotify/wydNotifyByBootstrap.css">
 <link rel="stylesheet" href="assets/ui-select/selectize.bootstrap3.css" />
 <link rel="stylesheet" href="assets/ui-select/select.min.css" />
+<link rel="stylesheet" href="assets/angular-block-ui/angular-block-ui.min.css"/>
 <link rel="stylesheet" href="assets/angular-aside/css/angular-aside.min.css" />
 <link rel="stylesheet" href="assets/home.css" />
 
@@ -144,6 +145,8 @@
 	src="assets/inputmask/jquery.inputmask.bundle.min.js"></script>
 <script type="text/javascript" 
 	src="assets/inputmask/green.inputmask4angular.js"></script>
+<script type="text/javascript"  
+	src="assets/angular-block-ui/angular-block-ui.min.js"></script>
 <script type="text/javascript" 
 	src="assets/angular-aside/js/angular-aside.min.js"></script>
 
