updating latest changes...

--- a/src/main/webapp/console.html
+++ b/src/main/webapp/console.html
@@ -44,19 +44,19 @@
 						<a x-ng-href="#/home"><i class="fa fa-home"></i> Home</a>
 					</li>
 					<li>
-					<a href="#/dataViewer">Data Viewer</a>
+						<a href="#/dataViewer">Data Viewer</a>
 					</li>
 					<li>
-					<a href="#/generalTransaction">General Transaction</a>
+						<a href="#/ledgerTransaction">Ledger Transaction</a>
 					</li>
 					<li>
-					<a href="#/salesTransaction">Sales Transaction</a>
+						<a href="#/salesTransaction">Sales Transaction</a>
 					</li>
 					<li>
-					<a href="#/transactions">Transactions</a>
+						<a href="#/transactions">Transactions</a>
 					</li>
 					<li>
-					<a href="#/trialBalance">Trial Balance</a>
+						<a href="#/trialBalance">Trial Balance</a>
 					</li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right" x-ng-hide="isLoggedIn">
