updating latest changes

--- a/src/main/webapp/home-d-employee.html
+++ b/src/main/webapp/home-d-employee.html
@@ -168,6 +168,8 @@
 
 <script type="text/javascript" src="modules/ledger/ledgerService.js"></script>
 <script type="text/javascript" src="modules/ledger/ledgerController.js"></script>
+<script type="text/javascript" src="modules/ledgers/ledgersController.js"></script>
+<script type="text/javascript" src="modules/ledgerTran/ledgerTranController.js"></script>
 
 <script type="text/javascript" src="modules/ledgerTran/ledgerTranController.js"></script>
 
