--- a/src/main/webapp/modules/customerTran/d.html
+++ b/src/main/webapp/modules/customerTran/d.html
@@ -31,7 +31,7 @@
 			{{item.productCode}}
 		</td>
 		<td>
-			-
+			{{productsMap[accountsMap[item.accountId].productId].name}}
 		</td>
 		<td class="text-center">
 			{{item.type}}
