--- a/src/main/webapp/home-d-manager.html
+++ b/src/main/webapp/home-d-manager.html
@@ -191,7 +191,7 @@
 
 <script type="text/javascript" src="modules/ledger/ledgerService.js"></script>
 <script type="text/javascript" src="modules/ledger/ledgerController.js"></script>
-
+<script type="text/javascript" src="modules/ledgers/ledgersController.js"></script>
 <script type="text/javascript" src="modules/ledgerTran/ledgerTranController.js"></script>
 
 <script type="text/javascript" src="modules/trialBalance/trialBalanceController.js"></script>
